# career-forge-v2

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  railway.toml
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: __init__.py  config.py  database.py  main.py
apps/api/fixtures/: validation_response.json
apps/api/scripts/: __init__.py  seed.py
apps/api/tests/: test_health.py  test_schemas.py
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/scripts/: __init__.py  docker-entrypoint.prod.sh  docker-entrypoint.sh  seed.py
apps/backend/tests/: conftest.py  test_ai_executor.py  test_ai_factory.py  test_catalog_tracks.py  test_cost_guard.py  test_cv.py  test_demo_api.py  test_diagnosis.py  test_diagnosis_interview_api.py  test_diagnosis_interview_graph.py  test_diagnosis_interview_payload.py  test_diagnosis_interview_schemas.py  test_diagnosis_interview_stream_api.py  test_evidence_envelope.py  test_forge_context.py  test_health.py  test_interview_script.py  test_key_concepts.py  test_knowledge_gaps.py  test_llm_structured.py  test_mentor.py  test_mentor_report.py  test_mock_interview.py  test_openai_diagnosis_interview_llm.py  test_openai_web_search.py  test_persistence_stores.py  test_planning.py  test_profile_diagnosis.py  test_roadmap.py  test_roadmap_forge.py  test_schemas.py  test_seed_demo_ana.py  (+5 more)
(+373 files in other folders)
