[project]
name = "career-forge-backend"
version = "0.1.0"
description = "Career Forge FastAPI backend (domain-oriented scaffold)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "pypdf>=5.1.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/career_forge"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
